prev commit has error this run successfully

--- a/templates/popup.html
+++ b/templates/popup.html
@@ -28,9 +28,9 @@
   url: $('input[name="url"]').val()
   },
   function(data) {
-    //$.each(data,function(i,val){
-  $("#search_result_id").append(i+"=>"+val.Url+"<br/>");
-  });
+   // $.each(data,function(i,val){
+  //$("#search_result_id").append(i+"=>"+val.Url+"<br/>");
+  //});
   });
   return false;
   });
