--- a/templates/contentScript.css
+++ b/templates/contentScript.css
@@ -45,7 +45,20 @@
 		width: 300px;
 		height: 60px;
 	}
-	#mextension_popup_video {
+	.popup_keyword1 {
+		background-color: white;
+		width: 380px;
+		height: 200px;
+		left: 0px;
+		bottom: 80px;
+		position: fixed;
+		border-top: 3px solid beige;
+		border-right: 3px solid beige;
+		border-bottom: 3px solid beige;
+		border-left: 3px solid beige; 
+	}
+	
+	.popup_keyword2 {
 		background-color: white;
 		width: 380px;
 		height: 200px;
@@ -55,3 +68,24 @@
 		border-width: .2em; 
 		border-color: beige; 
 	}
+	.popup_keyword3 {
+		background-color: white;
+		width: 380px;
+		height: 200px;
+		left: 582px;
+		bottom: 80px;
+		position: fixed;
+		border-width: .2em; 
+		border-color: beige; 
+	}
+	.popup_keyword4 {
+		background-color: white;
+		width: 380px;
+		height: 200px;
+		left: 877px;
+		bottom: 80px;
+		position: fixed;
+		border-width: .2em; 
+		border-color: beige; 
+	}
+
