--- a/templates/contentScript.css
+++ b/templates/contentScript.css
@@ -77,6 +77,14 @@
 		width: 71px;
 		height: 60px;
 	}
+	#tweets{
+		position: absolute;
+		left: 1324px;
+		top: 5px;
+		background-color: white;
+		width: 71px;
+		height: 60px;
+	}
 	.popup_keyword1 {
 		background-color: white;
 		width: 380px;
