finally working button

--- a/templates/contentScript.css
+++ b/templates/contentScript.css
@@ -14,7 +14,7 @@
 		background-color: white;
 		height: 26px;
 	}
-	#nextkeyword{
+	#rifunextkeyword{
 		position: absolute;
 		left: 1224px;
 		top: 43px;
