--- a/templates/contentScript.css
+++ b/templates/contentScript.css
@@ -2,158 +2,307 @@
 		display: block;
 		float:right;
 		position:relative;
-		top:-10px;
-		right: -10px;
-		height: 20px;
+		top:-5px;
+		left:-10px;
+		height: 25px;
+		cursor:pointer;
 	}​
+	 
 	#rifuprevkeyword{
 		position: absolute;
-		left: 1224px;
+		left: 840px;
 		top: 5px;
 		width: 43px;
 		background-color: white;
 		height: 26px;
+		cursor:pointer;
 	}
 	#rifunextkeyword{
 		position: absolute;
-		left: 1224px;
+		left: 840px;
 		top: 43px;
 		background-color: white;
 		width: 43px;
 		height: 26px;
+		cursor:pointer;
 	}
+	
 	.layout{
 		position: fixed;
-		bottom: 1%;
-		width: 1347px;
-		background-color: white;
-		height: 70px;
+		bottom: 2%;
+		width: 99%;
+		background-color: gainsboro;
+		height: 80px;
+		border-top: 1px solid gray;
+		border-right: 1px solid gray;
+		border-bottom: 1px solid gray;
+		border-left: 1px solid gray; 
+		border-radius:10px 40px;
 	}
+
 	.mextension {
 		position: relative;
 		right: 10px;
-		left: 15px;
-		background-color: beige;
-		width: 1314px;
+		left: 10px;
+		background-color: gainsbro;
+		width: 1300px;
 		height: 70px;
 	}
-	.keyword1{
+	
+.keyword1{
 		position: absolute;
-		left: 14px;
+		left: 146px;
 		top: 5px;
-		width: 250px;
-		background-color: white;
+		width: 150px;
+		background-color: lightSteelBlue;
 		height: 60px;
+		border-top-left-radius:10px 10px;
+		border-bottom-left-radius:10px 10px;
 		border-top: 1px solid gray;
-		border-left: 1px solid gray;
-		border-bottom: 1px solid gray;
 		border-right: 1px solid gray;
+		border-bottom: 1px solid gray;
+		border-left: 1px solid gray; 
+		text-align:center;
+		text-decoration:underline;
+		border-radius: 10px;
 	}
+	.keyword1:hover{
+         background-color: gainsboro;
+ }
+
+p#keyword1{
+		cursor:pointer;
+		color:black;
+		font-style:normal;
+                font-size: 20px;
+                font-variant: small-caps;
+                font-stretch: expanded;
+                font-family: 'Century Gothic',futura,'URW Gothic L',Verdana,sans-serif
+        }
+	
 	.keyword2{
 		position: absolute;
-		left: 268px;
+		left: 300px;
 		top: 5px;
-		background-color: cyan;
-		width: 250px;
+		background-color: lightSteelBlue;
+		width: 171px;
 		height: 60px;
+		border-radius:10px;
 		border-top: 1px solid gray;
-		border-left: 1px solid gray;
-		border-bottom: 1px solid gray;
 		border-right: 1px solid gray;
+		border-bottom: 1px solid gray;
+		border-left: 1px solid gray;
+		text-align:center;
+		text-decoration:underline; 
+		text-underline-color:blue;
 	}
+         .keyword2:hover{
+         background-color:gainsboro;
+ }
+	p#keyword2{
+		cursor:pointer;
+		color:black;
+		font-style:normal;
+                font-size: 20px;
+                font-variant: small-caps;
+                font-stretch: expanded;
+                font-family: 'Century Gothic',futura,'URW Gothic L',Verdana,sans-serif
+        }
+		
 	.keyword3{
 		position: absolute;
-		left: 522px;
+		left: 475px;
 		top: 5px;
-		background-color: white;
-		width: 250px;
+		background-color: lightSteelBlue;
+		width: 171px;
 		height: 60px;
+		border-radius:10px;
 		border-top: 1px solid gray;
-		border-left: 1px solid gray;
-		border-bottom: 1px solid gray;
 		border-right: 1px solid gray;
+		border-bottom: 1px solid gray;
+		border-left: 1px solid gray; 
+		text-align:center;
+		text-decoration:underline;
+		font-style:normal;
 	}	
+	.keyword3:hover{
+     		background-color:gainsboro;
+ }
+	p#keyword3{
+		cursor:pointer;
+		color:Black;
+		font-style:normal;
+                font-size: 20px;
+                font-variant: small-caps;
+                font-stretch: expanded;
+                font-family: 'Century Gothic',futura,'URW Gothic L',Verdana,sans-serif
+        }
+	
 	.keyword4{
 		position: absolute;
-		left: 777px;
+		left: 650px;
 		top: 5px;
-		background-color: cyan;
-		width: 250px;
+		background-color: lightSteelBlue;
+		width: 171px;
 		height: 60px;
+		border-radius:10px;
 		border-top: 1px solid gray;
-		border-left: 1px solid gray;
-		border-bottom: 1px solid gray;
 		border-right: 1px solid gray;
+		border-bottom: 1px solid gray;
+		border-left: 1px solid gray; 
+		text-align:center;
+		text-decoration:underline;
+		font-style: normal;
+		font-size: 30px;
+		font-variant: small-caps;
+		font-stretch: expanded;
+		font-family: 'Century Gothic',futura,'URW Gothic L',Verdana,sans-serif;
+		
 	}
+	.keyword4:hover{
+        background-color:gainsboro;
+ }
+p#keyword4{
+		cursor:pointer;
+		color:black;
+		font-style:normal;
+                font-size: 20px;
+                font-variant: small-caps;
+                font-stretch: expanded;
+                font-family: 'Century Gothic',futura,'URW Gothic L',Verdana,sans-serif
+        }
 	.keyword5{
 		position: absolute;
 		left: 1035px;
 		top: 5px;
-		background-color: white;
-		width: 175px;
+		background-color: dodgerBlue;
+		width: 100px;
 		height: 60px;
+		border-radius:10px;
 		border-top: 1px solid gray;
-		border-left: 1px solid gray;
-		border-bottom: 1px solid gray;
 		border-right: 1px solid gray;
+		border-radius:5px solid gray;
+		border-bottom: 1px solid gray;
+		border-left: 1px solid gray; 
+		text-align:center;
 	}
+	.keyword5:hover{
+        background-color: lightSkyBlue;
+ 	}
+	p#keyword5{
+
+		position:abolsute;
+		top:34px;
+		right:21px;
+		cursor:pointer;
+		color:white;
+		
+		font-style:normal;
+                font-size: 20px;
+                font-variant: small-caps;
+                font-stretch: expanded;
+                font-family: 'Century Gothic',futura,'URW Gothic L',Verdana,sans-serif
+        }
 	.popup_keyword1 {
-		background-color: white;
-		width: 253px;
+		background-color: whitesmoke;
+		width: 250px;
 		height: 200px;
-		left: 33px;
-		bottom: 80px;
-		position: fixed;
-		border-top: 3px solid beige;
-		border-right: 3px solid beige;
-		border-bottom: 3px solid beige;
-		border-left: 3px solid beige;
+		left: 157px;
+		bottom: 90px;
+		position:fixed;
+		text-align:left;
+		border-radius:10px 10px;		
+		border-top: 2px solid gray;
+		border-right: 2px solid gray;
+		border-bottom: 2px solid gray;
+		border-left: 2px solid gray;
+		overflow:scroll;		 
+		
 	}
-	
 	.popup_keyword2 {
-		background-color: white;
-		width: 253px;
+		background-color:whitesmoke;
+		width: 250px;
 		height: 200px;
-		left: 289px;
-		bottom: 80px;
-		position: fixed;
-		border-top: 3px solid beige;
-		border-right: 3px solid beige;
-		border-bottom: 3px solid beige;
-		border-left: 3px solid beige;
+		left: 307px;
+		bottom: 90px;
+		position:fixed;
+		text-align:left;
+		border-radius:10px 10px;
+		border-width: .2em; 
+		border-top: 3px solid gray;
+		border-right: 3px solid gray;
+		border-bottom: 3px solid gray;
+		border-left: 3px solid gray;
+		overflow:scroll;  
 	}
 	.popup_keyword3 {
-		background-color: white;
-		width: 253px;
+		background-color: whitesmoke;
+		width: 250px;
 		height: 200px;
-		left: 545px;
-		bottom: 80px;
+		left: 482px;
+		bottom: 90px;
 		position: fixed;
-		border-top: 3px solid beige;
-		border-right: 3px solid beige;
-		border-bottom: 3px solid beige;
-		border-left: 3px solid beige;	}
-	.popup_keyword4 {
-		background-color: white;
-		width: 253px;
-		height: 200px;
-		left: 798px;
-		bottom: 80px;
-		position: fixed;
-		border-top: 3px solid beige;
-		border-right: 3px solid beige;
-		border-bottom: 3px solid beige;
-		border-left: 3px solid beige;
+		border-radius:10px 10px;
+		text-align:left	;	
+		border-width: .2em; 
+		border-top: 3px solid gray;
+		border-right: 3px solid gray;
+		border-bottom: 3px solid gray;
+		border-left: 3px solid gray; 		
+		overflow:scroll;
 	}
+	.popup_keyword4 {
+		background-color: whitesmoke;
+		width: 250px;
+		height: 200px;
+		left: 660px;
+		bottom: 90px;
+		position:fixed;
+		border-radius:10px 10px;
+		text-align:left	;			
+		border-width: .2em; 
+		border-top: 3px solid gray;
+		border-right: 3px solid gray;
+		border-bottom: 3px solid gray;
+		border-left: 3px solid gray; 
+		background-repeat:repeat-x;
+		overflow:scroll;
+	}
+	
 	.popup_keyword5 {
-		background-color: white;
+		background-color: lightSkyBlue;
 		width: 253px;
 		height: 200px;
 		left: 1051px;
 		bottom: 80px;
 		position: fixed;
-		border-top: 3px solid beige;
-		border-right: 3px solid beige;
-		border-bottom: 3px solid beige;
-		border-left: 3px solid beige;
+		border-radius:10px 10px;
+		border-top: 3px solid gray;
+		border-right: 3px solid gray;
+		border-bottom: 3px solid gray;
+		border-left: 3px solid gray; 
+		background-repeat:repeat-x;
+		overflow:scroll;
+	}
+	.tweet{
+		top: 20px;
+		position:absolute;
+		right: 42px;
+}
+
+	.gmap{
+		position:absolute;
+		top: -11px;
+		height: 85px;
+		left: 36px;
+		cursor:pointer;
+	}
+
+
+
+	.spinner{
+ 		position:absolute;
+		top:38px;
+		height:25px;
+		left:126px;
 	}
